add really ugly color scheme for quassel

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "x/pointless-xcompose"]
 	path = x/pointless-xcompose
 	url = https://github.com/leoboiko/pointless-xcompose
+[submodule "awesome/vicious"]
+	path = awesome/vicious
+	url = http://git.sysphere.org/vicious
