change pentadactyl theme to solarized

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "awesome/vicious"]
 	path = awesome/vicious
 	url = http://git.sysphere.org/vicious
+[submodule "pentadactyl/external/pentadactyl-solarized"]
+	path = pentadactyl/external/pentadactyl-solarized
+	url = https://github.com/claytron/pentadactyl-solarized
