switch to nouveau

--- a/x/compton.conf
+++ b/x/compton.conf
@@ -11,9 +11,10 @@ backend = "glx"
 paint-on-overlay = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
+glx-swap-method = -1;
 
 # With newer NVIDIA drivers, this option is needed to prevent lags/flickering:
-xrender-sync-fence = true;
+#xrender-sync-fence = true;
 
 unredir-if-possible = true;
-vsync = "opengl-swc";
+vsync = "opengl-oml";
