--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -2,7 +2,7 @@ no-greeting
 require-cross-certification
 charset utf-8
 
-keyserver hkp://keys.gnupg.net
+keyserver hkp://pool.sks-keyservers.net
 #keyserver pgp.mit.edu
 
 keyserver-options auto-key-retrieve
