--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -28,19 +28,19 @@ order += "load"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "☁:%quality@%essid,%ip"
-        format_down = "☁:☓"
+        format_up = "☁%quality@%essid,%ip"
+        format_down = "☁"
 }
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
-        format_down = "E:☓"
+        format_down = "E"
 }
 
 battery 0 {
         format = "%status %percentage %remaining"
-        hide_seconds = true
+        # hide_seconds = true
 }
 
 run_watch DHCP {
