Why was the big cat disqualified from the race? Because it was a cheetah.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,6 +14,7 @@
     discard = checkout --
     uncommit = reset --mixed HEAD~
     graph = log --graph -10 --branches --remotes --tags  --format=format:'%Cgreen%h %Creset• %<(75,trunc)%s (%cN, %cr) %Cred%d' --date-order    
+    dad = !curl https://icanhazdadjoke.com/ && git add
 [push]
 	default = simple
 [user]
