Change ProxyCommands in ssh to use ProxyJump, remove nonexistant office

--- a/misc/.ssh/config
+++ b/misc/.ssh/config
@@ -28,7 +28,7 @@ Host lilo
 Host c2n_fr
     HostName collect2net.osso.nl
     User alectryon
-    ProxyCommand ssh yorick@frumar.yori.cc -W %h:%p
+    ProxyJump yorick@frumar.yori.cc
 
 Host pub.yori.cc
     User public
@@ -37,8 +37,5 @@ Host pub.yori.cc
 
 Host asc_wh
     hostname 192.168.1.4
-    ProxyCommand ssh yorick@woodhouse.onion -W %h:%p
+    ProxyJump yorick@woodhouse.onion
 
-Host asc_lilo
-    hostname 131.174.142.247
-    ProxyCommand ssh -q lilo nc -q0 %h 22
