I finally need xrandr-sync-fence for the nvidia drivers

--- a/x/compton_default.conf
+++ b/x/compton_default.conf
@@ -14,7 +14,7 @@ glx-no-rebind-pixmap = true;
 glx-swap-method = -1;
 
 # With newer NVIDIA drivers, this option is needed to prevent lags/flickering:
-#xrender-sync-fence = true;
+xrender-sync-fence = true;
 
 unredir-if-possible = true;
 vsync = "opengl-oml";
