--- a/misc/.ssh/config
+++ b/misc/.ssh/config
@@ -39,3 +39,13 @@ Host asc_wh
     hostname 192.168.1.4
     ProxyJump yorick@woodhouse.onion
 
+Host skl_deployer
+    hostname deployer.serokell.team
+    RemoteForward /home/yorick/.aws/pass-socket /home/yorick/.aws/pass-socket
+    RemoteForward /home/yorick/.gnupg/S.gpg-agent /home/yorick/.gnupg/S.gpg-agent.extra
+   ForwardAgent yes
+Host skl_deployer_vbox
+    hostname 192.168.56.101
+    ForwardAgent yes
+    RemoteForward /home/yorick/.aws/pass-socket /home/yorick/.aws/pass-socket
+    RemoteForward /home/yorick/.gnupg/S.gpg-agent /home/yorick/.gnupg/S.gpg-agent.extra
