--- a/home-manager/waybar.toml
+++ b/home-manager/waybar.toml
@@ -27,7 +27,7 @@ format = '<span style="italic">{}</span>'
 spacing = 10
 
 [clock]
-format = "{:%Y-%m-%d %H:%M}"
+format = "{:%a %d %b %H:%M}"
 on-click = "xdg-open https://calendar.google.com"
 
 [disk]
@@ -59,14 +59,14 @@ on-click-right = "~/dotfiles/bin/btoggle.sh"
 [pulseaudio.format-icons]
 headphones = ""
 handsfree = ""
-headset = ""
+headset = ""
 phone = ""
 portable = ""
 car = ""
 default = [ "", "" ]
 
 ["custom/spotify"]
-format = " {}"
+format = "{}"
 escape = true
 max-length = 40
 on-click = "playerctl play-pause"
