--- a/nixos/machines/frumar/rtorrent.rc
+++ b/nixos/machines/frumar/rtorrent.rc
@@ -85,7 +85,7 @@ print = (cat, "Logging to ", (cfg.logfile))
 log.open_file = "log", (cfg.logfile)
 log.add_output = "info", "log"
 
-method.insert = get_public_ip_address, simple|private, "execute.capture=curl,-f,ifconfig.me/ip"
+method.insert = get_public_ip_address, simple|private, "execute.capture=curl,-f,-4,https://ifconfig.me/ip"
 # The IP address reported to the tracker. (ip) This handles dynamic IP's as well.
 schedule2 = ip_tick, 0, 1800, "network.local_address.set=(get_public_ip_address)"
 
